--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 cache: bundler
 script: bundle exec rake release_checks
 before_install:
+- gem update system
 - gem update bundler
 matrix:
   fast_finish: true
