--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ matrix:
   include:
   - rvm: 2.3.4
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04
+    env: PUPPET_INSTALL_TYPE=agent PUPPET_GEM_VERSION="5.3.2" BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04
     script: bundle exec rake beaker
     services: docker
     sudo: required
   - rvm: 2.3.4
     dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent BEAKER_debug=true BEAKER_set=docker/ubuntu-16.04
+    env: PUPPET_INSTALL_TYPE=agent PUPPET_GEM_VERSION="5.3.2" BEAKER_debug=true BEAKER_set=docker/ubuntu-16.04
     script: bundle exec rake beaker
     services: docker
     sudo: required
