--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,12 @@ matrix:
     sudo: required
   - rvm: 2.3.4
     bundler_args: "--without system_tests"
+    env: PUPPET_GEM_VERSION="5.3.2"
+  - rvm: 2.3.4
+    bundler_args: "--without system_tests"
     env: PUPPET_GEM_VERSION="~> 5.0"
+  - rvm: 2.3.4
+    bundler_args: "--without system_tests"
+    env: PUPPET_GEM_VERSION="~> 6.0"
 notifications:
   email: false
