--- a/.travis.yml
+++ b/.travis.yml
@@ -1,34 +1,32 @@
 language: ruby
 cache: bundler
-script:
-  - cat Gemfile.lock
-  - bundle exec rake release_checks
 before_install:
 - gem update system
+- gem update bundler
+- bundle --version
 - rm -f Gemfile.lock
+script:
+  - cat Gemfile.lock
+  - 'bundle exec rake $CHECK'
 matrix:
   fast_finish: true
   include:
   - rvm: 2.3.4
-    dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent PUPPET_GEM_VERSION="5.3.2" BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04
-    script: bundle exec rake beaker
+    env: CHECK=beaker PUPPET_INSTALL_TYPE=agent PUPPET_GEM_VERSION="5.3.2" BEAKER_IS_PE=no BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_debug=true BEAKER_set=docker/ubuntu-14.04
     services: docker
     sudo: required
   - rvm: 2.3.4
-    dist: trusty
-    env: PUPPET_INSTALL_TYPE=agent PUPPET_GEM_VERSION="5.3.2" BEAKER_debug=true BEAKER_set=docker/ubuntu-16.04
-    script: bundle exec rake beaker
+    env: CHECK=beaker PUPPET_INSTALL_TYPE=agent PUPPET_GEM_VERSION="5.3.2" BEAKER_IS_PE=no BEAKER_PUPPET_COLLECTION=puppet5 BEAKER_debug=true BEAKER_set=docker/ubuntu-16.04
     services: docker
     sudo: required
   - rvm: 2.3.4
-    bundler_args: "--without system_tests"
-    env: PUPPET_GEM_VERSION="5.3.2"
+    bundler_args: --without system_tests
+    env: CHECK=release_checks PUPPET_GEM_VERSION="5.3.2"
   - rvm: 2.3.4
-    bundler_args: "--without system_tests"
-    env: PUPPET_GEM_VERSION="~> 5.0"
+    bundler_args: --without system_tests
+    env: CHECK=release_checks PUPPET_GEM_VERSION="~> 5.0"
   - rvm: 2.3.4
-    bundler_args: "--without system_tests"
-    env: PUPPET_GEM_VERSION="~> 6.0"
+    bundler_args: --without system_tests
+    env: CHECK=release_checks PUPPET_GEM_VERSION="~> 6.0"
 notifications:
   email: false
